@@ -143,24 +143,27 @@ grub_mdraid_detect (grub_disk_t disk, struct grub_raid_array *array,
 			  &sb))
 	return grub_errno;
 
-      if (sb.magic != SB_MAGIC)
+      if (grub_le_to_cpu32 (sb.magic) != SB_MAGIC)
 	continue;
 
       {
 	grub_uint64_t sb_size;
 	struct grub_raid_super_1x *real_sb;
+	grub_uint32_t level;
 
-	if (sb.major_version != 1)
+	if (grub_le_to_cpu32 (sb.major_version) != 1)
 	  return grub_error (GRUB_ERR_NOT_IMPLEMENTED_YET,
 			     "Unsupported RAID version: %d",
-			     sb.major_version);
+			     grub_le_to_cpu32 (sb.major_version));
+
+	level = grub_le_to_cpu32 (sb.level);
 
 	/* Multipath.  */
-	if ((int) sb.level == -4)
-	  sb.level = 1;
+	if ((int) level == -4)
+	  level = 1;
 
-	if (sb.level != 0 && sb.level != 1 && sb.level != 4 &&
-	    sb.level != 5 && sb.level != 6 && sb.level != 10)
+	if (level != 0 && level != 1 && level != 4 &&
+	    level != 5 && level != 6 && level != 10)
 	  return grub_error (GRUB_ERR_NOT_IMPLEMENTED_YET,
 			     "Unsupported RAID level: %d", sb.level);
 
@@ -209,7 +212,7 @@ grub_mdraid_detect (grub_disk_t disk, struct grub_raid_array *array,
 
 	grub_memcpy (array->uuid, real_sb->set_uuid, 16);
 	
-	*start_sector = real_sb->data_offset;
+	*start_sector = grub_le_to_cpu64 (real_sb->data_offset);
 
 	grub_free (real_sb);
 	return 0;
